style.css
@font-face {
  font-family: Rubik;
  src: url(templates/fonts/Rubik/Rubik-VariableFont_wght.ttf);
}



@font-face {
  font-family: Brice;
  src: url("templates/fonts/Brice Regular SemiExpanded/Brice Regular SemiExpanded.otf");
}


body {
	margin: 0px;
	padding: 0px;
	background-color: black;
	color: white;
	font-family: Rubik;

}

table {
	margin: 10px auto 0px auto;
	border: 2px solid #F99716;
	text-align: center;
	border-spacing: 0px;
	border-radius: 16px;
	background-color: black;
	color:white;
}

td {
	vertical-align: baseline;
	padding: 4px;
}

th {
	background-color: #F99716;
	padding: 4px;
	color: black;
	border-top-right-radius: 12px;
	border-top-left-radius: 12px;
}

.gradientButton {
	background-image: linear-gradient(to left, #11A047, #F0CC8E);
	border-radius: 16px;
	border: 0px;
	cursor: pointer;
	padding: 8px;
	font-size: 16px;
}
.gradientButton:hover {
	background: #333;
	color: white;
}
	
.warningMessage {
	color: red;
	font-weight: bold;
}

.loginHolder {
	margin: 2px 8px;
	padding: 4px 8px;
	/*border: 1px solid #888;
	*/
	float: right;
	border-radius: 4px;
}

.loginTitle{
	font-size: 20px;
	text-align: center;
	margin: 0px 0px;
}

.login > form > label {
	width: 70px;
	display: inline-block;
	text-align: right;
}

.login > form > input[type=text], .login > form > input[type=password] {
	margin-top: 2px;
	width: 200px;
}

.login > form > input[type=submit] {
	margin: 0px auto;
	display: block;
	width: 134px;
}

.loginFormDivider {
	text-align: center;
	width: 100%;
}

.swapFormButton {
	margin: 0px auto;
	display: block;
	width: 134px;
}


.menuItem {
	text-decoration: none;
}

.menuItem > div{
	/* border: 2px solid #666; */
	width: 400px;
	height: 60px;
	font-size: 24px;
	line-height: 60px;
	border-radius: 16px;
	color: black;
	background-image: linear-gradient(to left, #11A047, #F0CC8E);
	margin: 10px;
}

.menuItem > div:hover{
	color: white;
	width: 400px;
	height: 60px;
	font-size: 24px;
	line-height: 60px;
	border-radius: 16px;
	
	background: #333;
}


.orderLineItem{
	/* border: 2px solid #666; */
	width: 600px;
	height: 60px;
	line-height: 60px;
	border-radius: 16px;
	color: black;
	/* background-color: red; */
	margin: 10px;
	font-size: 24px;
	padding: 0px;
	
	background-image: linear-gradient(to left, #11A047, #F0CC8E);
}

.orderLineItem > a {
	text-decoration: none;
}

.addLineItemButton {
	width: 40px;
	#border: 1px solid red;
	display: inline-block;
	text-decoration: none;
	float: right;
	background-color: #11A047;
	
	color: black;
	border-top-right-radius: 14px;
	border-bottom-right-radius: 14px;
}

.addLineItemButton:hover, .removeLineItemButton:hover {
	background-color: #333;
	color: white;
}

.removeLineItemButton {
	width: 40px;
	#border: 2px solid #11A047;
	display: inline-block;
	text-decoration: none;
	float: left;
	background-color: #F0CC8E;
	color: black;
	border-top-left-radius: 14px;
	border-bottom-left-radius: 14px;
}


.outerTable {
	padding: 10px;
	background-color: #F99716;
	color: black;
}

.searchBox{
	height: 32px;
	font-size: 16px;
	font-weight: bold;
	padding: 4px;
	display: block;
	margin: 4px auto;
	width: 80%;
}

.showLobbyTable > tr > td{
	background-color: white;
}

.logoHeader {
	background-image: url(templates/images/logo.png);
	background-repeat: no-repeat;
	width: 100%;
	height: 144px;
	
}

.welcomeLoginHolder {
}

.welcomeLogin {
}

.welcomeLoginTitle {
}

.welcomePageHolder {
	border: 0px;
	width: 100%;
}

.welcomePageLeftSideA {
	/*
	border: 1px solid green;
	*/
	width: 50%;
	font-size: 80px;
	font-family: Brice;
	text-align: left;
	color: #ff914d;
}

.welcomePageLeftSideA > div {
	/*
		border: 1px solid purple;
	*/
	width: 500px;
	margin: 0px auto;
}

.welcomePageLeftSideB {
	/*
	border: 1px solid red;
	*/
}

.welcomePageRightSide {
	
	
	height: 600px;
	/*
	border: 1px solid blue;
	
	border-radius: 40px;
	*/
	background-image: url(templates/images/welcomeSplashImage.jpg);
	background-repeat: no-repeat;
	height: 500px;
	width: 600px;
	background-size: clip;
	background-position: center;
	
}

